#101 fix remote device sync